# get-ppbrowser

./: .env1  .gitignore  README.md  pyproject.toml  pyrightconfig.json  tbump.toml
.github/workflows/: build-and-pytest.yml
get_ppbrowser/: __init__.py  config.py  get_ppbrowser.py
tests/: test_get_ppbrowser.py  test_version.py
